--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -15,11 +15,13 @@
     <string name="lock_screen_title">Lock screen</string>
     <string name="lock_screen_summary">Interface, miscellaneous</string>
     <string name="status_bar_title">Status bar</string>
-    <string name="status_bar_summary">Gestures, Icons, privacy indicators</string>
+    <string name="status_bar_summary">Icons, privacy indicators</string>
     <string name="quick_settings_title">Quick settings</string>
     <string name="quick_settings_summary">Interface, lock screen</string>
     <string name="notifications_title">Notifications</string>
     <string name="notifications_summary">Alerts, interface</string>
+    <string name="gestures_title">Gestures</string>
+    <string name="gestures_summary">Status bar, shake, three finger</string>
     <string name="power_menu_title">Power menu</string>
     <string name="power_menu_summary">Actions, lock screen</string>
     <string name="buttons_title">Buttons</string>
@@ -423,6 +425,31 @@
     <string name="notifications_less_boring_heads_up_title">Less boring</string>
     <string name="notifications_less_boring_heads_up_summary">Display popup notifications only for alarm, dialer and messaging app</string>
 
+    <!-- Gestures/Three Finger Gestures -->
+    <string name="gestures_three_finger_gestures_title">Three finger gestures</string>
+    <string name="gestures_three_finger_gesture_action_title">Three finger swipe gestures</string>
+    <string name="gestures_three_finger_gesture_action_dialog_title">Swipe three finger gestures actions</string>
+    <string name="gestures_three_finger_long_press_action_title">Three finger long press gestures</string>
+    <string name="gestures_three_finger_long_press_action_dialog_title">Three finger long press gestures actions</string>
+
+    <!-- Gestures/Shake Gestures -->
+    <string name="hardware_keys_action_nothing">No action</string>
+    <string name="hardware_keys_action_close_app">Kill foreground app</string>
+    <string name="hardware_keys_action_search">Search assistant</string>
+    <string name="hardware_keys_action_voice_search">Voice search</string>
+    <string name="gestures_shake_gestures_enabled_title">Shake gestures</string>
+    <string name="gestures_shake_gestures_enabled_summary">Shake your device to perform actions</string>
+    <string name="gestures_shake_gestures_action_title">Shake gestures actions</string>
+    <string name="gestures_shake_gestures_intensity_title">Shake gestures intensity</string>
+    <string name="gestures_shake_gestures_intensity_summary">Adjust the sensitivity of shake gestures</string>
+    <string name="shake_gestures_toggle_flashlight">Toggle Flashlight</string>
+    <string name="shake_gestures_media_playback">Play/Skip Media</string>
+    <string name="shake_gestures_volume_panel">Show Volume Panel</string>
+    <string name="shake_gestures_screen_wake">Turn Screen Off</string>
+    <string name="shake_gestures_clear_notifs">Clear All Notifications</string>
+    <string name="shake_gestures_toggle_ringer">Toggle Ringer Mode</string>
+    <string name="shake_gestures_screenshot">Take Screenshot</string>
+
     <!-- Power menu -->
     <string name="power_menu_interface_category">Interface</string>
     <string name="power_menu_actions_title">Power menu actions</string>
@@ -457,31 +484,6 @@
     <string name="miscellaneous_ignore_window_secure_summary">Remove restrictions on screenshots and screen recordings for all applications, potentially risking privacy leaks</string>
     <string name="miscellaneous_unlimit_screenrecord_title">Unlimit screenrecord</string>
     <string name="miscellaneous_unlimit_screenrecord_summary">Remove the 15GiB file size limit\nMay result in a larger than needed output file</string>
-
-    <!-- Miscellaneous/Three Finger Gestures -->
-    <string name="miscellaneous_three_finger_gestures_title">Three finger gestures</string>
-    <string name="miscellaneous_three_finger_gesture_action_title">Three finger swipe gestures</string>
-    <string name="miscellaneous_three_finger_gesture_action_dialog_title">Swipe three finger gestures actions</string>
-    <string name="miscellaneous_three_finger_long_press_action_title">Three finger long press gestures</string>
-    <string name="miscellaneous_three_finger_long_press_action_dialog_title">Three finger long press gestures actions</string>
-
-    <!-- Miscellaneous/Shake Gestures -->
-    <string name="hardware_keys_action_nothing">No action</string>
-    <string name="hardware_keys_action_close_app">Kill foreground app</string>
-    <string name="hardware_keys_action_search">Search assistant</string>
-    <string name="hardware_keys_action_voice_search">Voice search</string>
-    <string name="miscellaneous_shake_gestures_enabled_title">Shake gestures</string>
-    <string name="miscellaneous_shake_gestures_enabled_summary">Shake your device to perform actions</string>
-    <string name="miscellaneous_shake_gestures_action_title">Shake gestures actions</string>
-    <string name="miscellaneous_shake_gestures_intensity_title">Shake gestures intensity</string>
-    <string name="miscellaneous_shake_gestures_intensity_summary">Adjust the sensitivity of shake gestures</string>
-    <string name="shake_gestures_toggle_flashlight">Toggle Flashlight</string>
-    <string name="shake_gestures_media_playback">Play/Skip Media</string>
-    <string name="shake_gestures_volume_panel">Show Volume Panel</string>
-    <string name="shake_gestures_screen_wake">Turn Screen On/Off</string>
-    <string name="shake_gestures_clear_notifs">Clear All Notifications</string>
-    <string name="shake_gestures_toggle_ringer">Toggle Ringer Mode</string>
-    <string name="shake_gestures_screenshot">Take Screenshot</string>
 
     <!-- Miscellaneous/Spoofing -->
     <string name="spoofing_title">Component spoofing</string>
