--- a/res/layout/preference_bootanimation_preview.xml
+++ b/res/layout/preference_bootanimation_preview.xml
@@ -7,8 +7,15 @@
     <ImageView
         android:id="@+id/bootanimation_preview_image"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="fitCenter"
+        android:layout_marginHorizontal="60dp"
+        android:layout_height="300dp"
+        android:scaleType="centerInside"
         android:contentDescription="@string/boot_animation_preview_desc" />
 
+    <ProgressBar
+        android:id="@+id/bootanimation_loading_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 </RelativeLayout>
