--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -373,6 +373,8 @@
     <string name="quick_settings_miscellaneous_category">Miscellaneous</string>
     <string name="quick_settings_bluetooth_auto_on_title">Bluetooth auto on</string>
     <string name="quick_settings_bluetooth_auto_on_summary">Automatically enable Bluetooth when opening its quick settings dialog</string>
+    <string name="quick_settings_split_shade_title">Split shade</string>
+    <string name="quick_settings_split_shade_summary">Split QS layout in landscape mode</string>
 
     <!-- Notifications -->
     <string name="notifications_interface_category">Interface</string>
