--- a/res/xml/evolution_settings_quick_settings.xml
+++ b/res/xml/evolution_settings_quick_settings.xml
@@ -59,6 +59,12 @@
             android:summary="@string/quick_settings_layout_columns_rows_summary"
             android:fragment="org.evolution.settings.fragments.quicksettings.LayoutSettings" />
 
+        <SwitchPreferenceCompat
+            android:key="qs_split_shade"
+            android:title="@string/quick_settings_split_shade_title"
+            android:summary="@string/quick_settings_split_shade_summary"
+            android:defaultValue="false" />
+
         <!-- Brightness slider -->
         <lineageos.preference.LineageSecureSettingListPreference
             android:key="qs_show_brightness_slider"
